/*
Copyright Â© 2021-2022 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package infinimesh.node.accounts;

message Credentials {
  string type = 1;
  repeated string data = 2;
}

message Account {
  string uuid = 1;
  string title = 2;
  bool enabled = 3;
}

message CreateRequest {
  Account account = 1;
  Credentials credentials = 2; // Credentials for New Account
  string namespace = 3; // Namespace to put Account under
  optional int32 access = 4; // Account access level to parent namespace
}

message CreateResponse {
  Account account = 1;
}

message AccountsPool {
  repeated Account accounts = 1;
}